fix cutoff image

--- a/src/app/css/Shop.css
+++ b/src/app/css/Shop.css
@@ -12,7 +12,6 @@
 #shop-links-section {
     width: 80vw;
     display: flex;
-    justify-content: center;
 }
 
 .shop-links {
